# msu_schedule_sync

./: .env.config.sample  .gitignore  README.md  main.py  pyproject.toml  setup_caldav.sh
.github/workflows/: ci.yml
parse/: __init__.py  browser.py  fill_columns.py  parse_sheet.py
sync/: __init__.py
sync/serve/: __init__.py  timetable_server.py
sync/telegram_bot/: __init__.py  core.py  formatting.py  runtime.py  store.py
tests/: conftest.py  test_formatting.py  test_pipeline_and_utils.py  test_serve_timetable.py
utils/: __init__.py  config.py
